<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.quiz.MainActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="8dp">
            <TextView
                android:id="@+id/score_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="Score"
            />
            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="#000000"
                android:text="0"
                android:textSize="24sp" />
        </RelativeLayout>
        <TextView
            style="@style/CustomText"
            android:text="@string/questtionOne"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioGroup
                android:id="@+id/questionGroupOne"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/choice1"
                    android:layout_weight="37.01"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/answerOne" />
                <RadioButton
                    android:id="@+id/choice2"
                    android:layout_weight="30"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/answerTwo" />
                <RadioButton
                    android:id="@+id/choice3"
                    android:layout_weight="30"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/answerThree" />

            </RadioGroup>

        </LinearLayout>
        <TextView
            style="@style/CustomText"
            android:text="@string/questtionTwo"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/check_1_questionTwo"
                android:text="@string/answerOne_questionTwo"
                style="@style/CustomButtonStyle"
                />
            <CheckBox
                android:id="@+id/check_2_questionTwo"
                style="@style/CustomButtonStyle"
                android:text="@string/answerOne_questionThree"
                />
            <CheckBox
                android:id="@+id/check_3_questionTwo"
                style="@style/CustomButtonStyle"
                android:text="@string/answerOne_questionFour"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/CustomText"
                android:text="@string/questtionThree"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/check_4_questionThree"
                    style="@style/CustomButtonStyle"
                    android:text="@string/questionthree_answwerOne" />

                <CheckBox
                    android:id="@+id/check_5_questionThree"
                    style="@style/CustomButtonStyle"
                    android:text="@string/questionthree_answwerTwo"
                    />
                <CheckBox
                    android:id="@+id/check_6_questionThree"
                    style="@style/CustomButtonStyle"
                    android:text="@string/questionthree_answwerThree"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/CustomText"
                    android:textColor="#000000"
                    android:text="@string/questtionFour"
                    />
                <EditText
                    android:id="@+id/name_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Answer"
                    android:inputType="text" />
            </LinearLayout>
            <TextView
                android:id="@+id/textView"
                style="@style/CustomText"
                android:textColor="#000000"
                android:text="@string/questionFive" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioGroup
                    android:id="@+id/questionGroupTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radio_1"
                        style="@style/RadioStyle"
                        android:text="@string/questionFive_answer1" />
                    <RadioButton
                        android:id="@+id/radio_2"
                       style="@style/RadioStyle"
                        android:text="@string/questionFive_answer2" />
                    <RadioButton
                        android:id="@+id/radio_3"
                        style="@style/RadioStyle"
                        android:text="@string/questionFive_answer3" />
                </RadioGroup>
            </LinearLayout>
            <Button
                android:id="@+id/mainsubmitBotton"
                style="@style/CustomButtonStyle"
                android:onClick="submitOrder"
                android:text="submit" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
